--- a/slides/NLP-introduction.tex
+++ b/slides/NLP-introduction.tex
@@ -561,7 +561,7 @@ NLP progress can be divided into three main waves: 1) rationalism, 2) empiricism
 \item [1950 - 1990] Rationalism: approaches endeavored to design hand-crafted rules to incorporate knowledge and reasoning mechanisms into intelligent NLP systems (e.g,  ELIZA for simulating a Rogerian psychotherapist, MARGIE for structuring real-world information into concept ontologies).
 \item [1991 - 2009] Empiricism: characterized by the exploitation of data corpora and
 of (shallow) machine learning and statistical models (e.g., Naive Bayes, HMMs, IBM translation models).
-\item [2010 - ] Deep Learning: tackle the bottleneck of feature engineering with represeation learning and/or deep neural networks (e.g., \url{https://www.deepl.com/translator})
+\item [2010 - ] Deep Learning: feature engineering (considered as a bottleneck) is replaced with represeation learning and/or deep neural networks (e.g., \url{https://www.deepl.com/translator}). A very influential paper in this revolution: \cite{collobert2011natural}.
 \end{itemize}
 
 \footnotetext{Dates are approximated.}
