--- a/slides/NLP-neural.tex
+++ b/slides/NLP-neural.tex
@@ -124,10 +124,10 @@ f(x) = \vec{x} \cdot W + \vec{b}\\
 \item This is a binary classifcation problem 
 \begin{equation}
 \begin{split}
-f(x) = \vec{x} \cdot w + b\\
+f(x) = \vec{x} \cdot \vec{w} + b\\
 \end{split}
 \end{equation}
- $d_{out}=1$, $w$ is a vector, and $b$ is a scalar. 
+ $d_{out}=1$, $\vec{w}$ is a vector, and $b$ is a scalar. 
 
  \item The range of the linear function in is $[-\infty,\infty]$.
  \item In order to use it for binary classification, it is common to pass the output of $f(x)$ through the $sign$ function, mapping negative values to -1 (the negative class) and non-negative values to +1 (the positive class).
@@ -143,10 +143,11 @@ f(x) = \vec{x} \cdot w + b\\
 \begin{itemize}
 
 \item Letter frequencies make for quite good predictors (features) for this task.
-\item Even more informative are counts of letter bigrams , i.e., pairs of consecutive letters.
-\item We assume we have an alphabet of 28 letters (a–z, space, and a special symbol for all other characters including digits, punctuations, etc.)
-\item Documents are represented as $28\times28$ dimensional vectors $\vec{x} \in \mathcal{R}^{784}$.
-\item Each entry $\vec{x}_{[i]}$  represents a count of a particular letter combination in the document, normalized by the document's length.
+\item Even more informative are counts of letter bigrams, i.e., pairs of consecutive letters.
+\item One may think that words will also be good predictors i.e., using a bag of word representation of documents.
+\item Letters, or letter-bigrams are far more robust.
+\item We are likely to encounter a new document without any of the words we observed in the training set.
+\item While a document without any of the distinctive letter-bigrams is significantly less likely. \cite{goldberg2017neural}
 \end{itemize}
 
 
@@ -156,16 +157,84 @@ f(x) = \vec{x} \cdot w + b\\
 
 
 \begin{frame}{Example: Language Detection}
+\begin{scriptsize}
+\begin{itemize}
+\item We assume we have an alphabet of 28 letters (a–z, space, and a special symbol for all other characters including digits, punctuations, etc.)
+\item Documents are represented as $28\times28$ dimensional vectors $\vec{x} \in \mathcal{R}^{784}$.
+\item Each entry $\vec{x}_{[i]}$  represents a count of a particular letter combination in the document, normalized by the document's length.
+\item For example, denoting by $\vec{x}_{ab}$ the entry of $\vec{x}$ corresponding to the letter bigram $ab$:
+\begin{equation}
+ x_{ab}= \frac{\#ab}{|D|}
+\end{equation}
+where $\#ab$ is the number of times the bigram $ab$ appears in the document, and $|D|$ is the total number of bigrams in the document (the document’s length).
+
+
+\end{itemize}
+
+
+\end{scriptsize}
+\end{frame}
+
+
+
+
+\begin{frame}{Example: Language Detection}
 
 
 \begin{figure}[htb]
 	\centering
 	 \includegraphics[scale=0.27]{pics/langbigrams.png}
-	 \caption{Character-bigram histograms for documents in English (left, blue) and German(right,green). Underscores denote spaces. }
 \end{figure}
 
-\footnotetext{Source:\cite{goldberg2016primer}}
+\scriptsize{Character-bigram histograms for documents in English (left, blue) and German(right,green). Underscores denote spaces. Only the top frequent character-bigrams are showed.}
 
+\footnotetext{Source:\cite{goldberg2017neural}}
+
+\end{frame}
+
+
+\begin{frame}{Example: Language Detection}
+\begin{scriptsize}
+\begin{itemize}
+\item Previous figure showed clear patterns in the data, and, given a new item, such as:
+
+\begin{figure}[htb]
+	\centering
+	 \includegraphics[scale=0.4]{pics/langbigramstest.png}
+\end{figure}
+
+\item We could probably tell that it is more similar to the German group than to the English one (observe the frequency of ``th'' and ``ie'').
+
+\item We can't use a single definite rule such as ``if it has th its English'' or ``if it has ie its German''.
+\item While German texts have considerably less ``th'' than English, the ``th'' may and does occur in German texts, and similarly the ``ie'' combination does occur in English.
+
+
+\end{itemize}
+
+
+\end{scriptsize}
+\end{frame}
+
+
+
+\begin{frame}{Example: Language Detection}
+\begin{scriptsize}
+\begin{itemize}
+\item The decision requires weighting different factors relative to each other.
+\item We can formalize the problem in a machine-learning setup using a linear model:
+\begin{equation}
+\begin{split}
+\hat{y} \quad = sign(f(x)) & = sign(\vec{x}\cdot \vec{w} + b) \\ 
+& = sign(\vec{x}_{aa}\times \vec{w}_{aa}+ \vec{x}_{ab}\times \vec{w}_{ab}+ \vec{x}_{ac}\times \vec{w}_{ac} \dots +b)
+\end{split}
+\end{equation}
+
+
+
+\end{itemize}
+
+
+\end{scriptsize}
 \end{frame}
 
 
@@ -275,7 +344,7 @@ NN_{MLP2}(\vec{x}) & =  \vec{y}  \\
 \begin{frame}{Network Training}
 \begin{scriptsize}
 \begin{itemize}
-\item  When training a neural network one defines a loss function $L(\hat{y}, y)$, stating the loss of predicting $\hat{y}$ when the true output is y.
+\item  When training a neural network (or a linear model) one defines a loss function $L(\hat{y}, y)$, stating the loss of predicting $\hat{y}$ when the true output is y.
 
 \item The training objective is then to minimize the loss across the different training examples. 
 
