--- a/slides/NLP-IR.tex
+++ b/slides/NLP-IR.tex
@@ -468,7 +468,7 @@ t5 & 0.000 & 0.954 & 0.000 \\ \hline
  \item Bag of words vectors lack linguistic structure.
  \item Bag of words vectors are high-dimensional and sparse. 
  \item Word n-grams can help capturing multi word-expressions (e.g., New York $=>$ new\_york)
- \item Modern information retrieval systems go beyond vector similarity (PageRank, Relevance Feedback, Query log mining,  Machine Learning).
+ \item Modern information retrieval systems go beyond vector similarity (PageRank, Relevance Feedback, Query log mining, Google Knowledge Graph, Machine Learning).
  \item Information retrieval and text mining are less concerned with linguistic structure, and more interested in producing fast and scalable algorithms \cite{jacobbook}. 
 \end{itemize}
 
